started to switch to Double[] instead of Pair in node